quick z-index fix

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -41,7 +41,7 @@ img {
 }
 
 .site-cover {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 9;
   position: fixed;
   height: 100%;
